@@ -17,9 +17,15 @@
 
 #include "mytableview.h"
 #include <QAccessible>
+#include <QHeaderView>
+#include <QShortcut>
 
 MyTableView::MyTableView(QWidget* parent/* = nullptr*/) : QTableView(parent)
 {
+    QShortcut* shortcutLeft = new QShortcut(QKeySequence(Qt::CTRL | Qt::Key_Left), this);
+    connect(shortcutLeft, &QShortcut::activated, this, &MyTableView::moveColumnLeft);
+    QShortcut* shortcutRight = new QShortcut(QKeySequence(Qt::CTRL | Qt::Key_Right), this);
+    connect(shortcutRight, &QShortcut::activated, this, &MyTableView::moveColumnRight);
 }
 
 void MyTableView::keyPressEvent(QKeyEvent* e)
@@ -30,7 +36,6 @@ void MyTableView::keyPressEvent(QKeyEvent* e)
         if (currentIndex.isValid())
         {
             emit this->doubleClicked(currentIndex);
-//            QAccessible::updateAccessibility(this, currentIndex, QAccessible::ValueChanged);
             QVariant value = currentIndex.data(Qt::CheckStateRole);
             if (value.isValid() && value.canConvert<Qt::CheckState>())
             {
@@ -65,5 +70,27 @@ void MyTableView::keyPressEvent(QKeyEvent* e)
     else
     {
         QTableView::keyPressEvent(e);
+    }
+}
+
+void MyTableView::moveColumnLeft()
+{
+    int col = this->currentIndex().column();
+    int visualIndex = this->horizontalHeader()->visualIndex(col);
+    if (visualIndex > 0)
+    {
+        this->horizontalHeader()->moveSection(visualIndex, visualIndex - 1);
+        this->setCurrentIndex(this->model()->index(this->currentIndex().row(), this->horizontalHeader()->logicalIndex(visualIndex - 1)));
+    }
+}
+
+void MyTableView::moveColumnRight()
+{
+    int col = this->currentIndex().column();
+    int visualIndex = this->horizontalHeader()->visualIndex(col);
+    if (visualIndex < this->model()->columnCount() - 1)
+    {
+        this->horizontalHeader()->moveSection(visualIndex, visualIndex + 1);
+        this->setCurrentIndex(this->model()->index(this->currentIndex().row(), this->horizontalHeader()->logicalIndex(visualIndex + 1)));
     }
 }
