@@ -42,7 +42,8 @@ OnlineUsersDlg::OnlineUsersDlg(QWidget* parent/* = 0 */)
     ui.keepDisconnectedUsersCheckBox->setChecked(ttSettings->value(SETTINGS_KEEP_DISCONNECTED_USERS, SETTINGS_KEEP_DISCONNECTED_USERS_DEFAULT).toBool());
     connect(ui.keepDisconnectedUsersCheckBox, &QAbstractButton::clicked, this, &OnlineUsersDlg::slotUpdateSettings);
 
-    m_model = new OnlineUsersModel(this);
+    using std::placeholders::_1;
+    m_model = new OnlineUsersModel(this, std::bind(&QHeaderView::logicalIndex, ui.tableView->horizontalHeader(), _1));
     m_proxyModel = new QSortFilterProxyModel(this);
     m_proxyModel->setSourceModel(m_model);
     ui.tableView->setModel(m_proxyModel);
@@ -67,6 +68,7 @@ OnlineUsersDlg::OnlineUsersDlg(QWidget* parent/* = 0 */)
     m_proxyModel->setSortCaseSensitivity(Qt::CaseInsensitive);
     m_proxyModel->sort(COLUMN_NICKNAME, Qt::AscendingOrder);
     ui.tableView->horizontalHeader()->restoreState(ttSettings->value(SETTINGS_DISPLAY_ONLINEUSERS_HEADERSIZES).toByteArray());
+    ui.tableView->horizontalHeader()->setSectionsMovable(true);
 }
 
 OnlineUsersDlg::~OnlineUsersDlg()
